Fixed spacing issues

--- a/resources/css/layout.css
+++ b/resources/css/layout.css
@@ -288,7 +288,7 @@ div.hover {
 	cursor: pointer;
 	font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	float: left;
-	margin-top: .5em;
+	margin-top: 0em;
 	text-decoration: none;
 
 
